--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "backend": "cd PythonAPI && venv/bin/python app.py",
+    "backend": "cd PythonAPI && ../venv/bin/python app.py",
     "start": "concurrently -n \"FRONT,BACK\" -c \"cyan,yellow\" \"npm run dev\" \"npm run backend\""
   },
   "dependencies": {
